apps/postgres/postgres-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres
  namespace: postgres
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`*`)
    services:
    - name: postgres
      port: 5432
